--- a/swiftkeys/src/App.css
+++ b/swiftkeys/src/App.css
@@ -1,8 +1,6 @@
-.main-container {
+.Main-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center; /* Optional: Center align vertically */
-    height: 100vh; /* Optional: Adjust height as needed */
+    height: 100vh;
   }
   
