--- a/swiftkeys/src/App.css
+++ b/swiftkeys/src/App.css
@@ -1,6 +1,18 @@
+/* CSS Reset */
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 .Main-container {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  padding: 0;
+  margin: 0; 
+  background-color: #1c1b1d;
+}
