--- a/swiftkeys/src/components/Header/Header.css
+++ b/swiftkeys/src/components/Header/Header.css
@@ -1,42 +1,44 @@
-
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 .header {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    padding: 1rem;
-    width: 100%;
-    position: fixed;
-    top: 1rem;
-    left: 7rem;
-  }
-  
-  .logo {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-  }
-  .logo img {
-    height: 40px;
-    width: auto;
-    margin-right: 0.5rem; 
-  }
-  
-  .logo h1 {
-    font-size: 2rem;
-    margin: 0;
-  }
-  
-  .icons {
-    margin-left: 2rem;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-  }
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 1rem;
+  position: relative;
+  top: 1rem;
+  padding-left: 7rem;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+}
 
-  .icons i {
-    font-size: 20px;
-    cursor: pointer;
-    margin-left: 1.9rem;
-  }
-  
+.logo {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: #deaf9d;
+}
+.logo img {
+  height: 40px;
+  width: auto;
+  margin-right: 0.5rem;
+}
+
+.logo h1 {
+  font-weight: 600;
+  margin: 0;
+}
+
+.icons {
+  margin-left: 2rem;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  color: #483a3a;
+}
+
+.icons i {
+  font-size: 20px;
+  cursor: pointer;
+  margin-left: 1.9rem;
+}
