--- a/swiftkeys/src/components/Words/Words.css
+++ b/swiftkeys/src/components/Words/Words.css
@@ -1,27 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
+
 .words-container {
-    max-width: 800px;
-    margin: 2rem auto; 
-    padding: 1rem;                
-  }
-  
-  .paragraph {
-    font-size: 1.5rem;
-    line-height: 1.6;
-    padding-bottom: 1rem;
-  }
-  
-  .cursor {
-    color: #333;
-    font-weight: bold;
-  }
-  
-  .type-input {
-    width: 100%;
-    padding: 0.5rem;
-    font-size: 1.2rem;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    margin-top: 1rem;
-    resize: none; 
-  }
-  
+  min-width: 70%;
+  margin: 8.4rem auto;
+  padding: 1rem 10rem;
+  max-height: 15rem; 
+  overflow-y: auto; 
+  color: #473939;
+  font-family: "JetBrains Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 300; 
+  font-style: normal;
+}
+
+.words-container p {
+  font-size: 0.9rem; 
+  line-height: 1.6;
+  padding-bottom: 1rem;
+}
+
+.words-container .cursor {
+  color: #333;
+  font-weight: bold;
+  font-size: 0.8rem; 
+}
+
+.words-container .type-input {
+  width: 100%;
+  padding: 0.5rem;
+  font-size: 1.2rem; 
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-top: 1rem;
+  resize: none;
+}
